--- a/public/assets/css/principal.css
+++ b/public/assets/css/principal.css
@@ -1,52 +1,31 @@
-.endeos-unslider { position: relative; overflow: auto; height: 400px!important;text-align: center;
-				-webkit-box-shadow: 0px 7px 8px 0px rgba(50, 50, 50, 0.6);
-				-moz-box-shadow:    0px 7px 8px 0px rgba(50, 50, 50, 0.6);
-				box-shadow:         0px 7px 8px 0px rgba(50, 50, 50, 0.6);}
-
-    .endeos-unslider li { list-style: none; }
-    	.endeos-unslider ul {padding:0;}
-        	.endeos-unslider ul li { float: left; height:400px!important; width: 25%!important;display: block}
-        		.endeos-unslider ul li p {font-size: 9px;float: right; margin-right: 10px; margin-top: 380px}
-
-
-
-.endeos-unslider .btn, .endeos-unslider .dot {
-		-webkit-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
-		-moz-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
-		-ms-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
-		-o-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
-		filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
+.rslides {
+	position: relative;
+	list-style: none;
+	overflow: hidden;
+	width: 100%;
+	padding: 0;
+	margin: 0;
 	}
-
-.endeos-unslider .dots {
-		position: absolute;
-		left: 0;
-		right: 0;
-		bottom: 20px;
+  
+  .rslides li {
+	-webkit-backface-visibility: hidden;
+	position: absolute;
+	display: none;
+	width: 100%;
+	left: 0;
+	top: 0;
 	}
-
-
-.endeos-unslider .dots li {
-	display: inline-block;
-	width: 10px;
-	height: 10px;
-	margin: 0 4px;
-	
-	text-indent: -999em;
-	
-	border: 2px solid #fff;
-	border-radius: 6px;
-	
-	cursor: pointer;
-	opacity: .4;
-	
-	-webkit-transition: background .5s, opacity .5s;
-	-moz-transition: background .5s, opacity .5s;
-	transition: background .5s, opacity .5s;
-}
-
-
-.endeos-unslider .dots li.active {
-	background: #fff;
-	opacity: 1;
-}
+  
+  .rslides li:first-child {
+	position: relative;
+	display: block;
+	float: left;
+	}
+  
+  .rslides img {
+	display: block;
+	height: 500px;
+	float: left;
+	width: 100%;
+	border: 0;
+	}
