--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -51,7 +51,7 @@ color: #B09A5B !important;
 }
 .post img {
     max-width: 100%;
-    height: auto;
+    height: 400px;
 }
 .circleBase {
     border-radius: 50%;
@@ -87,5 +87,23 @@ color: #B09A5B !important;
   min-height: 100%;
 }
 
+ol {text-align: justify}
+
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.csdata{
+    height: 650px;
+}
+
+.imgbcgrnd{
+    background-color: rgb(179, 160, 109);
+}
+.spaceimg{
+    padding-top: 0.2em;
+}
 @media (min-width: 1200px) {
 }
