--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -51,7 +51,7 @@ color: #B09A5B !important;
 }
 .post img {
     max-width: 100%;
-    height: 400px;
+    height: auto;
 }
 .circleBase {
     border-radius: 50%;
