ultimas modificaciones en el portal icatech

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,6 +24,19 @@ Version: 1.0
     height: 250px;
 }
 
+/* modificacion de estilo de imagen */
+.masonry-img-caption {
+    display: inline-block;
+    height: 250px;
+    width: 100%;
+}
+
+.masonry-img-caption img {
+    object-fit: cover;
+    width:100%;
+    height: 390px;
+}
+
 .masonry-img-square img {
     object-fit: cover;
     width:100%;
