--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -19,7 +19,9 @@ body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: 100% 100%;
+    object-fit: cover;
+    object-position: center center;
   }
 
 
@@ -294,7 +296,7 @@ body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: 100% 100%;;
+    background-size: 100% 100%;
   }
 
   /* responsividad para resolución de tabletas y ipads */
