modificaciones en redes sociales

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -165,6 +165,13 @@ body {
       max-width: 100%;
       max-height: auto;
     }
+
+    .comunicados .redes_sociales {
+      text-align: right;
+      max-width: 100%;
+      top: 2em;
+      position: absolute;
+    }
   }
   
   @media (min-width: 992px) {
